[metadata]
name = az-st7735
version = 0.1.2
author = Timo Zimmermann
author_email = github@timozimmermann.de
description = Python library for the ST7735 controlled 1.8inch display from AZ-Delivery
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mrbluesky125/az-st7735
project_urls =
    Bug Tracker = https://github.com/mrbluesky125/az-st7735/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src